Fixed Code Viewer line spacings; Added btn hovers;

--- a/src/app/code-viewer/code-viewer.page.scss
+++ b/src/app/code-viewer/code-viewer.page.scss
@@ -6,32 +6,69 @@
   background-color: #333;
 }
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #fff;
+}
+
+#sourceCode {
+  width: 100%;
+  // padding: 5px;
+}
+
 #codeLineNumbers{
   float: left;
   width: 30px;
   padding: 0 5px;
   background-color: #ddd;
   color: #333;
+
+  -webkit-user-select: none; /* Chrome/Safari */        
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+ */
+
+  /* Not implemented yet */
+  -o-user-select: none;
+  user-select: none;    
+}
+
+#codeLine{
+  margin-left: 30px;
+  width: auto;
+  padding: 0 5px;
+  background-color: #fff;
+  color: #333;
+  white-space: pre-wrap;
 }
 
 p { white-space: pre-wrap; color: #000; }
 
-.scrollbar {
-	height: auto; width: 100%;
-	overflow-y: scroll;
-  direction: ltr;
-}
-.scrollbar::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-  border-radius: 10px;
-  background-color: #ddd;
-}
-.scrollbar::-webkit-scrollbar {
-  width: 6px;
-  background-color: #ddd;
-} 
-.scrollbar::-webkit-scrollbar-thumb {
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-  background-color: #333;
-}
+// .codeSideScroll {
+//   width: auto;
+// 	overflow-x: scroll;
+//   direction: ltr;
+// }
+
+// .scrollbar {
+//   height: auto; width: auto;
+//   overflow-x: scroll;
+// 	overflow-y: scroll;
+//   direction: ltr;
+// }
+// .scrollbar::-webkit-scrollbar-track {
+//   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+//   border-radius: 10px;
+//   background-color: #ddd;
+// }
+// .scrollbar::-webkit-scrollbar {
+//   width: 6px;
+//   background-color: #ddd;
+// } 
+// .scrollbar::-webkit-scrollbar-thumb {
+//   border-radius: 4px;
+//   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+//   background-color: #333;
+// }
